<?xml version="1.0"?>
<package format="2">
  <name>scout_diagnostics</name>
  <version>1.0.0</version>
  <description>dynamixel_pan_tilt_drivers provides driver for the Ice Nine Mini Dynamixel Pan Tilt device</description>
  <maintainer email="anthony.jiang.github@outlook.com">Zhengyi Jiang</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>scout_msgs</depend>
</package>
